wip..lots of changes..added exec scripts..